--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,14 +19,14 @@ jobs:
           platform: linux/amd64
           push-image: true
           region: '${AWS_REGION}'
-          repo: demo
+          repo: travel-pack
           registry-id: AWS_ECR_REGISTRY_ID
           repo-scan-on-push: true
           tag: latest
 
   continuous-delivery:
     machine: true
-    resource_class: bappy/test
+    resource_class: harshalkumre/test
     steps:
       - aws-cli/setup
 
@@ -36,11 +36,11 @@ jobs:
 
       - run:
           name: pull image from private repository
-          command: docker pull 136566696263.dkr.ecr.us-east-1.amazonaws.com/demo:latest
+          command: docker pull 136566696263.dkr.ecr.us-east-1.amazonaws.com/travel-pack:latest
       
       - run:
           name: run image
-          command: docker run -d -p 5000:5000 136566696263.dkr.ecr.us-east-1.amazonaws.com/demo:latest
+          command: docker run -d -p 5000:5000 136566696263.dkr.ecr.us-east-1.amazonaws.com/travel-pack:latest
 workflows:
   CICD:
     jobs:
